# Formale-Sprachen-Compiler-und-Werkzeugbau

./: .gitignore
Uebung_1/doc/: Documentation.tex  Syntaxtree.vsdx
Uebung_1/source/Grammar/: CMakeLists.txt  Grammar.cpp  Grammar.h  GrammarUtil.cpp  GrammarUtil.hpp  Language.cpp  Language.hpp  LanguageUtil.cpp  LanguageUtil.hpp  LanguageUtils.cpp  LanguageUtils.hpp  Main.cpp  ObjectCounter.h  SequenceStuff.cpp  SequenceStuff.h  SymbolPool.cpp  SymbolPool.h  Vocabulary.cpp  Vocabulary.h
Uebung_2/doc/: Documentation.tex  Graphviz_definitions.txt
Uebung_3/doc/: Documentation.dvi  Documentation.ps  Documentation.tex  abc.ps
Uebung_3/doc/graphviz/: 2c-automat.gv  2c-minimized-automat.gv
Uebung_3/src/AutomataForStudentsV4/: AutomateUtil.cpp  AutomateUtil.hpp  CMakeLists.txt  CharSet.cpp  CharSet.h  DFA.cpp  DFA.gv  DFA.h  DFATest.cpp  DFAmin.gv  FA.cpp  FA.h  Grammar.cpp  Grammar.h  IdDFA.txt  Main.cpp  Mappers.cpp  Mappers.h  Mealy.cpp  Mealy.hpp  NFA.cpp  NFA.h  NFA1.txt  NFATest.cpp  ObjectCounter.h  SequenceStuff.cpp  SequenceStuff.h  StateStuff.cpp  StateStuff.h  SymbolStuff.cpp  SymbolStuff.h  Test.cpp  TestMealy.cpp  TestNfaToDfa.cpp  Vocabulary.cpp  Vocabulary.h  XFA.cpp  XFA.hpp
Uebung_4/doc/: Documentation.tex
Uebung_4/doc/images/: graph.gv
Uebung_4/src/Bison-2.7/: Calc.tab.c  Calc.y  minic.dot  minic.tab.c  minic.tab.h  minic.y
Uebung_4/src/Calc/: CMakeLists.txt  lex.yy.c
Uebung_4/src/Dobler-Minic/: MiniC.y
Uebung_4/src/Flex-2.5.37/: Calc.l  lex.yy.c
Uebung_4/src/MiniC/: CMakeLists.txt  lex.yy.c  main.c  minic-lex.yy.c  minic.dot  minic.l  minic.output  minic.tab.c  minic.tab.h  minic.y  minic_commented.l  test.c
Uebung_4/src/MiniCPP/: CMakeLists.txt  minicpp-lex.yy.c  minicpp.dot  minicpp.l  minicpp.output  minicpp.tab.c  minicpp.tab.h  minicpp.y  test.cpp  test.mcpp  test2.cpp  test2.mcpp  tmp.mcpp
Uebung_4/src/Other/: minic.l  minicpp.l  minicpp.y
Uebung_4/src/Other/Bison/: minicpp.dot  minicpp.output  minicpp.tab.c  minicpp.tab.h
Uebung_4/src/Other/Flex/: lex.yy.c  mpat
Uebung_5/doc/: Documentation.tex  notes.txt
Uebung_5/src/Calc/: Calc.atg  Calc.cs  Calc.pgt.lst  Calc.sg.lst  calc-expr.txt
Uebung_5/src/Coco-2/: MiniCLex.cs  MiniCPPLex.cs  MiniCPPSem.cs  MiniCPPSyn.cs  MiniCSem.cs  MiniCSyn.cs
Uebung_5/src/MiniC/: MiniC.atg  MiniC.cs  MiniC.pgt.lst  MiniC.sg.lst  MiniCLex.cs  MiniCSyn.cs
Uebung_5/src/MiniCPP/: MiniCPP.cs  MiniCPPLex.cs  MiniCPPSem.cs  MiniCPPSyn.cs  MiniCpp.atg  MiniCpp.pgt.lst  MiniCpp.sg.lst  minicpptest.cpp  minicpptest.lst  minicpptest_wurm.lst  test.cpp  test.lst
Uebung_5/src/Wurm/: MiniCPP.atg
Uebung_6/doc/: notes.txt
Uebung_6/src/: CIL.cs
Uebung_6/src/Coco-2/: Main.frm
Uebung_6/src/MiniCpp.cs.T1/: MiniCpp.atg  MiniCpp.cs  MiniCpp.pgt.lst  MiniCpp.sg.lst  Sieve.mcpp  Sieve_Gen.mcpp
Übung 1/doc/: Documentation.tex
